fixing mobile portrait horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,17 @@
 	box-sizing: border-box;
 }
 
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 body {
 	height: 600vh;
 	font-size: 8px;
 	font-family: 'Noto Sans KR', sans-serif;
 	text-transform: uppercase;
 	background-color: #f1f1f1;
-	overflow-x: hidden;
 }
 
 .highlight-red {
@@ -390,8 +394,8 @@ footer>div:not(.socials) {
 		box-sizing: border-box;
 	}
 	
-	body {
-		background-color: #f1f1f1;
+	html, body {
+		max-width: 100vw;
 		overflow-x: hidden;
 	}
 	
